# ai-playground

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
datascience_principles/assignment/: report.ipynb  starter-test-case-prioritization-data-4fdfedfb-d.ipynb  starter-test-case-prioritization-data-4fdfedfb-d.ipynb:Zone.Identifier
datascience_principles/assignment/datasets/: tcp-dataset.csv:Zone.Identifier
datascience_principles/week_2/: ABOUT.md
datascience_principles/week_2/raw_datasets/: FIFA SQUADS.xlsx
datascience_principles/workshop_2/notebook/: clean-datasets.ipynb
datascience_principles/workshop_2/raw_datasets/: FIFA DATA SET SMALL.xlsx  FIFA PLAYERS.xlsx
datascience_principles/workshop_4/notebook/: linear_regression.ipynb
src/: app.py
